# unfold

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: BLOCK_STANDARD.md  MODULARIZATION.md  blocks_supported.md  coverage_audit.md  diffusion_connection_audit.md  llm_connection_audit.md  sable_dable_playbook.md  serve_audit.md  should_support_coverage.md
examples/: deepseek-v3.html  flux-1-dev.html  gemma-4-31b.html  gemma-4-e4b.html  kimi-k2.html  llama-3-8b.html  mistral-7b-v0.3.html  unet-deepfloyd-if.html  unet-kandinsky2.2.html  unet-sd1.5.html  unet-sd2.1.html  unet-sdxl-base.html  unet-sdxl-refiner.html
model_unfolder/: __init__.py  block_schema.py  diagram.py  errors.py  html_renderer.py  ir.py  labels.py  lint.py  opgraph.py  params.py  parser.py  preview.py  sable.py  submodel.py
model_unfolder/everchanging/: __init__.py  aliases.json  aliases.yaml  diffusion_aliases.yaml
model_unfolder/evidence/: __init__.py  ast_scanner.py  audio.py  conformance.py  context.py  ffn.py  forward_ops.py  fusion.py  identity_guard.py  inspector.py  models.py  patterns.py  position.py  projector.py  sources.py  transitive.py  validate.py  vision.py
model_unfolder/expanded/: __init__.py  attention.py  block_graph.py  code_evidence.py  ffn.py  grouping.py  layer_group.py  loop.py  modalities.py  norms.py  ops.py  pathways.py  region.py  residual.py  sections.py  stack.py  utils.py
model_unfolder/renderers/: __init__.py
scripts/: coverage_audit.py  dit_coverage.py  serve_audit.py
tests/: test_audio_evidence.py  test_block_schema.py  test_code_evidence.py  test_conformance.py  test_coverage.py  test_declared_ops.py  test_diffusion.py  test_everchanging.py  test_expanded_json.py  test_ffn_evidence.py  test_fusion_evidence.py  test_identity_guard.py  test_opgraph.py  test_projector_evidence.py  test_sable.py  test_smoke.py  test_submodel_parity.py  test_tower.py  test_vision_evidence.py
tests/sable_corpus/: auraflow-v0-3.json  cogvideox-5b.json  (+13 more)
unfold/: __init__.py  diagram.py  html_renderer.py  ir.py  labels.py  parser.py
unfold.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+158 files in other folders)
