[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-unfolder"
version = "0.2.11"
description = "Unfold any HuggingFace transformer into an interactive architecture diagram, inline in Jupyter."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "model-unfolder contributors"}]
license = {text = "Apache-2.0"}
keywords = ["transformers", "visualization", "llm", "architecture", "jupyter"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Framework :: Jupyter",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/SoumilB7/unfold"
Repository = "https://github.com/SoumilB7/unfold"
"Bug Tracker" = "https://github.com/SoumilB7/unfold/issues"

[project.optional-dependencies]
hf = ["transformers>=4.40"]
dev = ["pytest>=7", "transformers>=4.40"]

[tool.setuptools.packages.find]
include = ["model_unfolder*"]

[tool.setuptools.package-data]
"model_unfolder.everchanging" = ["*.yaml", "*.yml"]
